Basic compatibility with Java 9